Revert "Revert "fixed left menu scroll on mobile. closes #47""
This reverts commit d44d78b0d324d37a49d581de1b8c6dba3f6dc1c9.

Conflicts:
	public/bootstrap/less/menu.less

--- a/public/bootstrap/less/menu.less
+++ b/public/bootstrap/less/menu.less
@@ -269,7 +269,7 @@
     max-width: 106%;
   }
 
-  body.hover &.nano.pushed {
+  &.nano.pushed {
     top: 180px;
     .transition(400ms);
   }
